Updates for readability on desktop article titles, fixes from quote articles and irons out mobile scrolling bug

--- a/sass/template/format-quote.scss
+++ b/sass/template/format-quote.scss
@@ -9,7 +9,6 @@
 
 		#main {
 
-
 			.entry-content {
 				h1.entry-title {
 					color: white;
@@ -24,6 +23,7 @@
 					@include text-shadow(0px 2px 0px rgba(0,0,0,.25));
 					-webkit-text-stroke-width: 0px !important;
 					-webkit-text-stroke-color: rgba(0,0,0,0) !important;
+					padding: 0;
 				}
 				h2.entry-subtitle {
 					margin-top:40px;
