--- a/sass/template/primary.scss
+++ b/sass/template/primary.scss
@@ -119,8 +119,8 @@
 							font-size: 160px !important;
 						}
 						.preview-title {
-							font-size: 24px;
-							line-height: 34px;
+							font-size: 18px;
+							line-height: 26px;
 						}
 					}
 				}
@@ -351,6 +351,11 @@
 					}
 				}
 			}
+
+			@include respond-to(xs) {
+				margin: 0 auto;
+				float: none;
+			}
 		}
 	}
 
@@ -400,7 +405,7 @@
 
 				.entry-title {
 					font-size: 95px;
-					line-height: 115px;
+					line-height: 105px;
 					background-clip: initial;
 					text-fill-color: initial;
 					-moz-background-clip: text;
@@ -446,7 +451,7 @@
 			#main {
 				.entry-title {
 					font-size: 55px;
-					line-height: 68px;
+					line-height: 75px;
 					height: auto;
 					padding-left: 75px;
 					padding-top: 12px;
