--- a/style.css
+++ b/style.css
@@ -2347,8 +2347,8 @@ a {
   body {
     padding: 0; }
 
-  body.overflow-fix {
-    overflow: hidden; } }
+  body.overflow-fix, html.overflow-fix {
+    overflow: hidden !important; } }
 .frame {
   margin-top: 102px;
   margin-bottom: 102px;
@@ -2472,8 +2472,8 @@ a {
               .frame #primary .nav-links a .mtk-arrow-left:before, .frame #primary .nav-links a .mtk-arrow-right:before {
                 font-size: 160px !important; }
               .frame #primary .nav-links a .mtk-arrow-left .preview-title, .frame #primary .nav-links a .mtk-arrow-right .preview-title {
-                font-size: 24px;
-                line-height: 34px; } }
+                font-size: 18px;
+                line-height: 26px; } }
     .frame #primary article {
       font-weight: 100;
       font-size: 24px;
@@ -2663,6 +2663,10 @@ a {
           text-align: center; }
         .frame #primary .post-preview a:hover .img-container img {
           opacity: 1; }
+      @media (max-width: 480px) {
+        .frame #primary .post-preview {
+          margin: 0 auto;
+          float: none; } }
   .frame.collapsed #primary {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
@@ -2708,7 +2712,7 @@ a {
         width: 100%; }
         .frame #primary #main .entry-title {
           font-size: 95px;
-          line-height: 115px;
+          line-height: 105px;
           background-clip: initial;
           text-fill-color: initial;
           -moz-background-clip: text;
@@ -2743,7 +2747,7 @@ a {
 @media (max-width: 650px) {
   .frame #primary #main .entry-title {
     font-size: 55px;
-    line-height: 68px;
+    line-height: 75px;
     height: auto;
     padding-left: 75px;
     padding-top: 12px;
@@ -3119,7 +3123,8 @@ a {
     text-align: left;
     text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.25);
     -webkit-text-stroke-width: 0px !important;
-    -webkit-text-stroke-color: rgba(0, 0, 0, 0) !important; }
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0) !important;
+    padding: 0; }
   .single-format-quote #primary #main .entry-content h2.entry-subtitle {
     margin-top: 40px;
     color: white;
